--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
-API_ID=6                                  
-API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
+API_ID=12132011                                  
+API_HASH=96c5baf51fa3a81fc67a34c6981462db
 
 #If the bot is intended for public use, keep the chat ID as 0. Otherwise, add the name of the chat ID to the list.
 AUTHORIZED_CHATS=[0]
 
 #Add sudo/owner userids.
-SUDO_USERID= [834836509,123456]
+SUDO_USERID= []
 
 #Add Bot Token from botfather.
-BOT_TOKEN= 
+BOT_TOKEN=5865526120:AAHsaoCFU4dvIqXGdh5rS3GUW5atW4z2SbU
