--- a/config.env
+++ b/config.env
@@ -2,10 +2,10 @@ API_ID=12132011
 API_HASH=96c5baf51fa3a81fc67a34c6981462db
 
 #If the bot is intended for public use, keep the chat ID as 0. Otherwise, add the name of the chat ID to the list.
-AUTHORIZED_CHATS=[-1001659338688]
+AUTHORIZED_CHATS=[0]
 
 #Add sudo/owner userids.
-SUDO_USERID= []
+SUDO_USERID= [0]
 
 #Add Bot Token from botfather.
-BOT_TOKEN=6614308515:AAHtHajuywfpE9RjcwTFo_PAggvzT-CCAnc
+BOT_TOKEN=5865526120:AAHsaoCFU4dvIqXGdh5rS3GUW5atW4z2SbU
