--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 requests_toolbelt
-pyrogram==2.0.73
+pyrogram 
 TgCrypto==1.2.4
 telegraph[aio]
 async-timeout
